crates/mlcg_builtin_macros/tests/ui/fail_helper_collision.stderr
error: generated item `Arg` for instruction `arg` collides with reserved generated helper `Arg`
 --> tests/ui/fail_helper_collision.rs:2:5
  |
2 |     mlcg_builtin_macros::include_manifest!("tests/helper_collision_manifest.toml");
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `mlcg_builtin_macros::include_manifest` (in Nightly builds, run with -Z macro-backtrace for more info)
