crates/mlcg_builtin_macros/tests/ui/fail_helper_collision.rs
mod generated {
    mlcg_builtin_macros::include_manifest!("tests/helper_collision_manifest.toml");
}

fn main() {}
